docs/0.18/_sources/api/gammapy.data.EventList.rst.txt
EventList
=========

.. currentmodule:: gammapy.data

.. autoclass:: EventList
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~EventList.altaz
      ~EventList.altaz_frame
      ~EventList.altaz_from_table
      ~EventList.energy
      ~EventList.galactic
      ~EventList.galactic_median
      ~EventList.is_pointed_observation
      ~EventList.observation_dead_time_fraction
      ~EventList.observation_live_time_duration
      ~EventList.observation_time_duration
      ~EventList.observation_time_start
      ~EventList.observation_time_stop
      ~EventList.observatory_earth_location
      ~EventList.offset
      ~EventList.offset_from_median
      ~EventList.pointing_radec
      ~EventList.radec
      ~EventList.time
      ~EventList.time_ref

   .. rubric:: Methods Summary

   .. autosummary::

      ~EventList.check
      ~EventList.from_stack
      ~EventList.map_coord
      ~EventList.peek
      ~EventList.plot_energy
      ~EventList.plot_energy_offset
      ~EventList.plot_image
      ~EventList.plot_offset2_distribution
      ~EventList.plot_time
      ~EventList.read
      ~EventList.select_energy
      ~EventList.select_map_mask
      ~EventList.select_offset
      ~EventList.select_parameter
      ~EventList.select_region
      ~EventList.select_row_subset
      ~EventList.select_time
      ~EventList.stack

   .. rubric:: Attributes Documentation

   .. autoattribute:: altaz
   .. autoattribute:: altaz_frame
   .. autoattribute:: altaz_from_table
   .. autoattribute:: energy
   .. autoattribute:: galactic
   .. autoattribute:: galactic_median
   .. autoattribute:: is_pointed_observation
   .. autoattribute:: observation_dead_time_fraction
   .. autoattribute:: observation_live_time_duration
   .. autoattribute:: observation_time_duration
   .. autoattribute:: observation_time_start
   .. autoattribute:: observation_time_stop
   .. autoattribute:: observatory_earth_location
   .. autoattribute:: offset
   .. autoattribute:: offset_from_median
   .. autoattribute:: pointing_radec
   .. autoattribute:: radec
   .. autoattribute:: time
   .. autoattribute:: time_ref

   .. rubric:: Methods Documentation

   .. automethod:: check
   .. automethod:: from_stack
   .. automethod:: map_coord
   .. automethod:: peek
   .. automethod:: plot_energy
   .. automethod:: plot_energy_offset
   .. automethod:: plot_image
   .. automethod:: plot_offset2_distribution
   .. automethod:: plot_time
   .. automethod:: read
   .. automethod:: select_energy
   .. automethod:: select_map_mask
   .. automethod:: select_offset
   .. automethod:: select_parameter
   .. automethod:: select_region
   .. automethod:: select_row_subset
   .. automethod:: select_time
   .. automethod:: stack
